--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="" class="mb-3" width="563"
+                    <img src="img/o-que-e-uma-orquestra-sinfonica-20180702161300.jpg.jpg" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#tropicalia"
+                    <a href="#orquestra"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/voce-sabe-a-diferenca-entre-orquestra-sinfonica-e-filarmonica-20210203092956.jpg.webp" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
@@ -54,7 +54,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/imagem-recortada-de-um-homem-tocando-violino_1048944-13286479.avif" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
@@ -83,10 +83,10 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/tocando-ilustracao-do-conceito-de-jazz_114360-7747.avif" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="img/qual-a-musica-classica-mais-dificil-de-tocarjpg-20220908094423.jpg.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
