--- a/index.html
+++ b/index.html
@@ -57,12 +57,22 @@
                     <img src="img/imagem-recortada-de-um-homem-tocando-violino_1048944-13286479.avif" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>O que e uma orquestra?</h2>
+                    <p class="p-2">Uma orquestra é um grupo de músicos que tocam instrumentos clássicos, como cordas, metais, sopros e percussão, para apresentar uma sequência de músicas. 
+                        Orquestra
+                        Definição
+                        Grupo de músicos e instrumentos musicais que se reúnem para tocar uma obra musical
+                        Objetivo
+                        Fundir os timbres dos instrumentos para criar harmonia
+                        Organização
+                        Dividida em naipes, como cordas, madeiras, metais e percussão
+                        Tipos
+                        Sinfônica, filarmônica e de câmara
+                        Regente
+                        Dirigente da orquestra que orienta o grupo através de gestos e expressões faciais
+                        A palavra orquestra vem do grego antigo orkhēstra, que significa "lugar de dança". Nos teatros gregos, era o espaço semicircular em frente ao palco onde dançava o coro. 
+                        A orquestra pode tocar: Concertos, Música para balés ou óperas, Música para filmes, Canções para uma grande plateia. 
+                        A disposição dos instrumentos na orquestra varia de acordo com o regente e a obra. O número de músicos e instrumentos também varia de acordo com a peça e a ocasião. </p>
                 </div>
             </div>
         </section>
